# faststream-cafe-bot

./: .env.example  README.md  docker-compose.yml  items.json  pyproject.toml
bot/: Dockerfile  README.md  app.py  bot.py  pyproject.toml  states.py
bot/api/: __init__.py  client.py
bot/core/: broker.py  config.py
bot/handlers/: __init__.py  menu.py  notify.py  order.py  start.py
bot/keyboards/: menu.py  product.py
cashier/: Dockerfile  README.md  app.py  pyproject.toml
cashier/api/: __init__.py  item.py  order.py
docs/: architecture.md
kitchen/: Dockerfile  README.md  api.py  app.py  pyproject.toml
shared/: README.md  pyproject.toml
shared/src/shared/: config.py  logger.py  schemas.py  topics.py
