[project]
name = "bot"
version = "0.1.0"
description = "Telegram bot for FastStream Cafe demo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "faststream[rabbit,cli]>=0.6.5",
    "pydantic-settings>=2.12.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
