[project]
name = "kitchen"
version = "0.1.0"
description = "Kitchen service for FastStream Cafe demo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "faststream[rabbit]>=0.6.5",
    "pydantic-settings>=2.12.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
